<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Updater</string>
    <string name="display_name">Updater</string>
    <string name="os_name" translatable="false">exTHmUI</string>
    <string name="download_path" translatable="false">/data/exthmui_updates/</string>
    <string name="export_path" translatable="false">exTHmUI updates/</string>
    <string name="updates_server_url" translatable="false">
        https://exthmui.github.io/update_scripts/{device}/updates.json
    </string>
    <string name="notices_server_url" translatable="false">
        https://exthmui.github.io/update_scripts/notices.json
    </string>
    <string name="main_no_updates">No new updates found</string>
    <string name="show_changelog">Show ChangeLog</string>
    <string name="title_notices">Notices</string>
    <string name="title_updates">Updates</string>
    <string name="title_advanced_settings">AdvancedSettings</string>
    <string name="setting_auto_update">Auto update</string>
    <string name="setting_auto_updates_download">Auto updates download</string>
    <string name="setting_auto_updates_download_use">Use</string>
    <string name="setting_auto_updates_download_network">Network</string>
    <string name="setting_auto_updates_download_cellular">Cellular</string>
    <string name="setting_auto_updates_download_wifi">WiFi</string>
    <string name="setting_auto_updates_download_bluetooth">Bluetooth</string>
    <string name="setting_auto_updates_download_ethernet">Ethernet</string>
    <string name="setting_auto_updates_download_vpn">VPN</string>
    <string name="setting_auto_updates_download_wifi_aware">WiFi Aware</string>
    <string name="setting_auto_updates_download_6lowpan">6LoWPan</string>
    <string name="setting_auto_updates_download_never">Never</string>
    <string name="setting_download_settings">Download Settings</string>
    <string name="setting_save_path">Download path</string>
    <string name="setting_update_settings">Update settings</string>
    <string name="setting_updates_server_url">Updates server URL</string>
    <string name="setting_notices_server_url">Notices server URL</string>
    <string name="setting_auto_delete_updates">Delete updates when installed</string>
    <string name="setting_clean_cache_after_update">Clean cache when installed</string>
    <string name="setting_clean_cache_after_update_summary">Clean Dalvik/ART cache when installed</string>
    <string name="setting_advanced_warning">Warning: If you do not understand the meaning of these parameters, please do not modify them</string>
    <string name="verification_failed_notification">Verification failed</string>
    <string name="verifying_download_notification">Verifying update</string>
    <string name="downloading_notification">Downloading</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_paused_error_notification">Download error</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="update_failed_notification">Update failed</string>
    <string name="installation_suspended_notification">Installation suspended</string>
    <string name="new_updates_found_title">New updates</string>
    <string name="text_download_speed">%1$s, %2$s/s</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="suspend_button">Suspend</string>
    <string name="installing_update">Installing update package</string>
    <string name="installing_update_error">Install error</string>
    <string name="installing_update_finished">Update installed</string>
    <string name="finalizing_package">Finalizing package installation</string>
    <string name="preparing_ota_first_boot">Preparing for first boot</string>
    <string name="dialog_prepare_zip_message">Preliminary update preparation</string>
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g
            id="percent_discharging">%1$d</xliff:g>%% of the battery to continue, <xliff:g id="percent_charging">
        %2$d</xliff:g>%% if charging.
    </string>
    <string name="reboot">Reboot</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_all_updates">Historical updates</string>
    <string name="menu_auto_updates_check">Auto updates check</string>
    <string name="menu_auto_updates_check_interval_daily">Once a day</string>
    <string name="menu_auto_updates_check_interval_weekly">Once a week</string>
    <string name="menu_auto_updates_check_interval_monthly">Once a month</string>
    <string name="menu_auto_updates_check_interval_never">Never</string>
    <string name="menu_auto_delete_updates">Delete updates when installed</string>
    <string name="menu_delete_update">Delete</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_export_update">Export update</string>
    <string name="menu_show_changelog">Show changelog</string>
    <string name="menu_ab_perf_mode">Prioritize update process</string>
    <string name="snack_updates_found">New updates found</string>
    <string name="snack_no_updates_found">No new updates found</string>
    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try
        again later.
    </string>
    <string name="snack_notices_check_failed">The notice check failed. Please check your internet connection and try
        again later.
    </string>
    <string name="snack_download_failed">The download failed. Please check your internet connection and try again
        later.
    </string>
    <string name="snack_download_verification_failed">The update verification failed.</string>
    <string name="snack_download_verified">Download completed.</string>
    <string name="snack_update_not_installable">This update can\'t be installed on top of the current build.</string>
    <string name="main_title_text" translatable="false">{os_name} %1$s</string>
    <string name="main_android_version">Android
        <xliff:g id="version" example="7.1.2">%1$s</xliff:g>
    </string>
    <string name="main_last_updates_check">Last checked: <xliff:g id="date" example="1 January 1970">%1$s
    </xliff:g> <xliff:g id="time" example="01:23">%2$s</xliff:g>
    </string>
    <string name="list_build_version_date">{os_name} <xliff:g id="version" example="14.1">%1$s</xliff:g> -
        <xliff:g id="date" example="July 11, 2017">%2$s</xliff:g>
    </string>
    <string name="list_download_progress_new">
        <xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g>
        of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g> •
        <xliff:g id="percentage" example="56">%3$s</xliff:g>
    </string>
    <string name="list_download_progress_eta_new">
        <xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g>
        of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g> (<xliff:g id="eta"
                                                                                         example="3 minutes left">
        %3$s</xliff:g>) •
        <xliff:g id="percentage" example="56">%4$s</xliff:g>
    </string>
    <string name="list_verifying_update">Verifying update</string>
    <string name="list_no_updates">"No appropriate historical updates found.     "</string>
    <string name="list_no_notices">"No notices found.     "</string>
    <string name="action_download">Download</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_install">Install</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the selected update file?</string>
    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to upgrade to <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf
        you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the
        update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.
    </string>
    <string name="apply_update_dialog_message_ab">You are about to upgrade to <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf
        you press <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing in the background.\n\nOnce
        completed, you will be prompted to reboot.
    </string>
    <string name="cancel_installation_dialog_message">Cancel the installation?</string>
    <string name="label_download_url">Download URL</string>
    <string name="toast_download_url_copied">URL Copied</string>
    <string name="dialog_export_title">Exporting update</string>
    <string name="notification_export_success">Update exported</string>
    <string name="notification_export_fail">Export error</string>
    <string name="toast_already_exporting">Already exporting an update</string>
    <plurals name="eta_seconds">
        <item quantity="one">1 second left</item>
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            seconds left
        </item>
    </plurals>
    <plurals name="eta_minutes">
        <item quantity="one">1 minute left</item>
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            minutes left
        </item>
    </plurals>
    <plurals name="eta_hours">
        <item quantity="one">1 hour left</item>
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            hours left
        </item>
    </plurals>
    <string name="update_on_mobile_data_title">Warning</string>
    <string name="update_on_mobile_data_message">You\'re about to download an update package using mobile data which is
        likely going to cause high data usage. Would you like to proceed?
    </string>
    <string name="checkbox_mobile_data_warning">Do not show again</string>
    <string name="menu_mobile_data_warning">Mobile data warning</string>
    <string name="blocked_update_dialog_title">Update blocked</string>
    <string name="blocked_update_dialog_message">This update cannot be installed using the updater app. Please read <xliff:g
            id="info_url">%1$s
    </xliff:g> for more information.
    </string>
    <string name="blocked_update_info_url" translatable="false">https://www.exthmui.cn/upgrade-blocked
    </string>
    <string name="export_channel_title">Export completion</string>
    <string name="new_updates_channel_title">New updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>
    <string name="update_failed_channel_title">Update failed</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="exthmui_logo" translatable="false">exTHmUI Logo</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="more_information">Changelogs</string>
</resources>