<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/exthmui_logo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/main_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:textStyle="bold"
            android:text="@string/main_no_updates"
            android:textColor="@color/theme_accent"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/main_status_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="exTHmUI 10.0"/>

    <TextView
            android:id="@+id/main_android_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Android 10"/>

    <TextView
            android:id="@+id/main_build_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/main_android_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="01 January 2020"/>


    <TextView
            android:id="@+id/main_last_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/main_build_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/main_last_updates_check"/>

    <Button
            android:id="@+id/main_check_for_updates"
            style="@style/BorderlessBtn.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/check_for_updates"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/main_last_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>