<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/exthmui_logo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/main_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:textStyle="bold"
            android:text="@string/new_updates_found_title"
            android:textColor="@color/theme_accent"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/main_status_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="exTHmUI 10.0"/>

    <TextView
            android:id="@+id/main_android_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Android 10"/>

    <TextView
            android:id="@+id/main_build_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/main_android_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="01 January 2020"/>


    <TextView
            android:id="@+id/main_maintainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/main_build_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Maintainer is: exTHmUI"/>

    <Button
            android:id="@+id/main_check_for_updates"
            style="@style/BorderlessBtn.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/check_for_updates"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/main_maintainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/main_show_changelog"
            style="@style/BorderlessBtn.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/more_information"
            app:layout_constraintTop_toBottomOf="@+id/main_check_for_updates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_build_size"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintVertical_bias="0.1"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="24dp"
            style="@style/FloatingActionBtn"
            app:srcCompat="@drawable/ic_file_download"
            app:layout_constraintTop_toBottomOf="@+id/main_show_changelog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_build_size"/>

    <TextView
            android:id="@+id/main_build_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:text="Size: 3.00 GB"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/relativeLayout">

        <ProgressBar
                android:id="@+id/main_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                tools:progress="28"/>

        <TextView
                android:id="@+id/main_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="marquee"
                android:singleLine="true"
                tools:text="46.8 of 300 PB (3 years left) • 15.6%"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>